# trading212-gnucash

./: .gitignore  README.md  codecov.yml  pyproject.toml  requirements.txt  trading212_config.yaml  trading212_converter.py
.github/workflows/: ci.yml
src/trading212_gnucash/: __init__.py  cli.py  config.py  converter.py  models.py
tests/: __init__.py  test_basic.py  test_cli.py  test_config.py  test_converter.py
